create the modals of the user and profile creation

--- a/templates/settings/employee/employee.html
+++ b/templates/settings/employee/employee.html
@@ -9,39 +9,43 @@
       </div>
       
       <!-- Modal -->
-      <div>
-        <!-- Modal Button -->
-        <button id="openModal"
-          class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4
-          focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5
-          me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none
-          dark:focus:ring-blue-800">
-            Add Employee
-        </button>
+      <!-- Modal toggle -->
+      <button
+        hx-get="{% url "create_user" %}"
+        hx-target="#modal_form"
+        hx-swap="innerHtml"
+        data-modal-target="authentication-modal" data-modal-toggle="authentication-modal" 
+        class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300
+        font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 
+        dark:focus:ring-blue-800 my-3" type="button">
+        Add Employee
+      </button>
 
-
-        <!-- Main modal -->
-        <div id="authentication-modal" tabindex="-1" aria-hidden="true" hx-target="this" 
-          class="hidden overflow-y-auto overflow-x-hidden fixed top-0 
-          right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
-        </div>
-
-
-        <div id="modal" class="fixed inset-0 z-50 overflow-auto bg-black bg-opacity-50 hidden">
-          <div class="flex items-center justify-center h-full">
-            <div class="bg-white p-8 rounded shadow-lg w-1/2">
-              <h2 class="text-lg font-bold mb-4">Modal Form</h2>
-              <form id="myForm" method="POST" hx-post="{% url 'create_user' %}" hx-trigger="submit">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
-                  Save
-                </button>
-              </form>
-              <button id="closeModal" class="mt-4 text-gray-500 hover:text-gray-700">Close</button>
+      <!-- Main modal -->
+      <div id="authentication-modal" tabindex="-1" aria-hidden="true" 
+        class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50
+        justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+        <div class="relative p-4 w-full max-w-md max-h-full">
+          <!-- Modal content -->
+          <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+            <!-- Modal header -->
+            <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600">
+              <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
+                Create User Account
+              </h3>
+              <button type="button" class="end-2.5 text-gray-400 bg-transparent hover:bg-gray-200
+                hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center
+                items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="authentication-modal">
+                <i class="text-2xl fa-solid fa-xmark"></i>
+                <span class="sr-only">Close modal</span>
+              </button>
+            </div>
+            <!-- Modal body -->
+            <div id="modal_form" class="p-4 md:p-5">
             </div>
           </div>
         </div>
+      </div> 
 
       <!-- Table -->
         <div 
@@ -51,17 +55,4 @@
         </div>
       </div>
     </div>
-
-
-    <script>
-        document.getElementById('openModal').addEventListener('click', function() {
-            document.getElementById('modal').classList.remove('hidden');
-        });
-        document.getElementById('closeModal').addEventListener('click', function() {
-            document.getElementById('modal').classList.add('hidden');
-        });
-    </script>
-
-
-
 {% endblock %}
