--- a/templates/settings/employee/modals/create_user.html
+++ b/templates/settings/employee/modals/create_user.html
@@ -2,16 +2,14 @@
   #modal_form form label {
     color: white;
   }
-  #modal_form form .pointer-events-none {
-    display: none;
-  }
 </style>
 
 {% load crispy_forms_tags %}
-<form hx-post="{% url 'user_profile' pk=pk %}" class="text-white">
+<form hx-post="{% url 'create_user' %}" class="text-white">
   {% csrf_token %}
   {{ form|crispy }}
-  <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:outline-none 
+  <button
+    type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:outline-none 
     focus:ring-4 focus:ring-blue-300 font-medium rounded-full text-sm px-5 py-2.5 text-center 
     me-2 mb-2 mt-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Add
   </button>
