--- a/templates/base.html
+++ b/templates/base.html
@@ -79,6 +79,7 @@
 
     <script src="{% static 'js/all.min.js' %}"></script>
     <script src="{% static 'js/htmx.min.js' %}"></script>
+    <script src="{% static 'js/_hyperscript.min.js' %}"></script>
     <script src="{% static 'js/flowbite.min.js' %}"></script>
 
     <script>
