--- a/templates/settings/settings.html
+++ b/templates/settings/settings.html
@@ -2,7 +2,11 @@
 
 {% block sidecontent %}
   <li>
-    <a href="{% url 'employee_list' %}" class="flex items-top p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 
+    <a 
+      hx-get="{% url "employee_list" %}"
+      hx-target="#settings_content"
+      hx-swap="innerHtml"
+      class="flex items-top p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 
       dark:hover:bg-gray-700 group">
       <span class="inline-block w-5 h-5 text-gray-500 transition duration-75 
         dark:text-gray-200 group-hover:text-gray-900 dark:group-hover:text-white">
@@ -14,5 +18,7 @@
 {% endblock sidecontent %}
 
 {% block content %} 
+  <div id="settings_content">
     {% include 'settings/employee/employee.html' %}
+  </div>
 {% endblock %}
