--- a/templates/settings/settings.html
+++ b/templates/settings/settings.html
@@ -6,6 +6,7 @@
       hx-get="{% url "employee_list" %}"
       hx-target="#settings_content"
       hx-swap="innerHtml"
+      _="on click add .bg-gray-700"
       class="flex items-top p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 
       dark:hover:bg-gray-700 group">
       <span class="inline-block w-5 h-5 text-gray-500 transition duration-75 
