--- a/templates/settings/employee/modals/create_user_profile.html
+++ b/templates/settings/employee/modals/create_user_profile.html
@@ -2,18 +2,29 @@
   #modal_form form label {
     color: white;
   }
-  #modal_form form .pointer-events-none {
-    display: none;
-  }
 </style>
 
 {% load crispy_forms_tags %}
 <form hx-post="{% url 'user_profile' pk=pk %}" class="text-white">
-  {% csrf_token %}
-  {{ form|crispy }}
-  <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:outline-none 
-    focus:ring-4 focus:ring-blue-300 font-medium rounded-full text-sm px-5 py-2.5 text-center 
-    me-2 mb-2 mt-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Add
-  </button>
+  <div class="border-b py-3">
+    {% csrf_token %}
+    {{ form|crispy }}
+  </div>
+  <div class="flex justify-between w-full m-3">
+    <button 
+      _="on click add .hidden to modal_div"
+      type="button" class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none
+      focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 my-3
+      dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">
+      cancel
+    </button>
+    <button 
+      _="on click add .hidden to modal_div"
+      class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300
+      font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 
+      dark:focus:ring-blue-800 my-3" type="submit">
+      Add
+    </button>
+  </div>
 </form>
-
+</div>
