--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="{% static 'src/output.css' %}">
       {% endcompress %}
   </head>
-  <body class="bg-gray-600">
+  <body class="bg-gray-600 h-screen">
     
     {% include 'includes/header.html' %}
     {% if user.is_authenticated %}
@@ -31,7 +31,9 @@
           <div class="h-full px-3 pb-4 overflow-y-auto bg-white dark:bg-gray-900 flex flex-col justify-between ">
             <ul class="space-y-2 font-medium">
               <li>
-                <a href="{% url 'home' %}" class="flex items-top p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 
+                <a
+                  href="{% url 'home' %}"
+                  class="flex items-top p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 
                   dark:hover:bg-gray-700 group">
                   <span class="inline-block w-5 h-5 text-gray-500 transition duration-75 
                     dark:text-gray-200 group-hover:text-gray-900 dark:group-hover:text-white">
@@ -47,7 +49,9 @@
             </ul>
             <ul class="space-y-2 font-medium">
               <li>
-                <a href="{% url 'settings' %}" class="flex items-top p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 
+                <a 
+                  href="{% url 'settings' %}"
+                  class="flex items-top p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 
                   dark:hover:bg-gray-700 group">
                   <span class="inline-block w-5 h-5 text-gray-500 transition duration-75 
                     dark:text-gray-200 group-hover:text-gray-900 dark:group-hover:text-white">
