--- a/templates/settings/settings.html
+++ b/templates/settings/settings.html
@@ -1,14 +1,15 @@
 {% extends 'base.html' %}
 
 {% block sidecontent %}
-  <li>
-    <a 
+  <li class="item">
+    <a
+      id="s_employee"
       hx-get="{% url "employee_list" %}"
       hx-target="#settings_content"
       hx-swap="innerHtml"
-      _="on click add .bg-gray-700"
-      class="flex items-top p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 
-      dark:hover:bg-gray-700 group">
+      _="on click remove .bg-gray-700 from .group in .item then add .bg-gray-700 to me"
+      class="flex items-top p-2 text-gray-900 bg-gray-700 rounded-lg dark:text-white hover:bg-gray-100 
+      dark:hover:bg-gray-700 group cursor-pointer">
       <span class="inline-block w-5 h-5 text-gray-500 transition duration-75 
         dark:text-gray-200 group-hover:text-gray-900 dark:group-hover:text-white">
         <i class="text-xl fa-solid fa-circle-plus"></i>
@@ -16,10 +17,26 @@
         <span class="ms-5 text-gray-300 text-lg">Employee</span>
     </a>
   </li>
+  <li class="item">
+    <a
+      id="s_category"
+      hx-get="{% url "category_list" %}"
+      hx-target="#settings_content"
+      hx-swap="innerHTML"
+      _="on click remove .bg-gray-700 from .group in .item then add .bg-gray-700 .text-white to me"
+      class="flex items-top p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 
+      dark:hover:bg-gray-700 group cursor-pointer max-h-full">
+      <span class="inline-block w-5 h-5 text-gray-500 transition duration-75 
+        dark:text-gray-200 group-hover:text-gray-900 dark:group-hover:text-white">
+        <i class="text-xl fa-solid fa-circle-plus"></i>
+      </span>
+        <span class="ms-5 text-gray-300 text-lg">Category</span>
+    </a>
+  </li>
 {% endblock sidecontent %}
 
 {% block content %} 
-  <div id="settings_content">
+  <div id="settings_content" class="h-screen">
     {% include 'settings/employee/employee.html' %}
   </div>
 {% endblock %}
