--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,19 @@
 {% extends 'base.html' %}
 
 {% block content %} 
+<div class="p-4 sm:ml-64">
+  <!-- Breadcrumb -->
+  <nav class="flex my-2 mt-12 p-4" aria-label="Breadcrumb">
+    <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
+      <li class="inline-flex items-center space-x-1 text-gray-700 dark:text-gray-400">
+        <i class="fas fa-home"></i>
+        <span class="ms-1 text-sm font-medium text-gray-500 md:ms-2 dark:text-gray-400">
+          Home
+        </span>
+      </li>
+    </ol>
+  </nav>
+  <div class="p-4 rounded-lg">
+  </div>
+</div>
 {% endblock %}
