--- a/templates/settings/employee/employee.html
+++ b/templates/settings/employee/employee.html
@@ -1,6 +1,28 @@
 <div class="p-4 sm:ml-64">
-  <div class="p-4 rounded-lg mt-14">
-
+  <!-- Breadcrumb -->
+  <nav class="flex my-2 mt-12 p-4" aria-label="Breadcrumb">
+    <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
+      <li class="inline-flex items-center space-x-1 text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
+        <i class=" fas fa-home"></i>
+        <a href="{% url 'home' %}" class="inline-flex items-center text-sm font-medium">
+          Home
+        </a> 
+        <i class="fa-solid fa-angle-right"></i>
+      </li>
+      <li class="inline-flex items-center space-x-1 text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
+        <a href="{% url 'settings' %}" class="inline-flex items-center text-sm font-medium">
+          Settings
+        </a> 
+        <i class="fa-solid fa-angle-right"></i>
+      </li>
+      <li class="inline-flex items-center space-x-1 text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
+        <span class="ms-1 text-sm font-medium text-gray-500 md:ms-2 dark:text-gray-400">
+          Employee
+        </span>
+      </li>
+    </ol>
+  </nav>
+  <div class="p-4 rounded-lg">
     <!-- Cards -->
     <div 
       hx-trigger="load, cards from:body" hx-get="{% url 'cards' %}" hx-target="this"
