--- a/templates/settings/employee/employee_detail.html
+++ b/templates/settings/employee/employee_detail.html
@@ -1,11 +1,41 @@
 <div class="p-4 sm:ml-64 h-modal">
-  <div class="p-4 pt-10 rounded-lg mt-14 h-modal px-10 min-w-min">
+  <!-- Breadcrumb -->
+  <nav class="flex my-2 mt-12 p-4" aria-label="Breadcrumb">
+    <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
+      <li class="inline-flex items-center space-x-1 text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
+        <i class=" fas fa-home"></i>
+        <a href="{% url 'home' %}" class="inline-flex items-center text-sm font-medium">
+          Home
+        </a> 
+        <i class="fa-solid fa-angle-right"></i>
+      </li>
+      <li class="inline-flex items-center space-x-1 text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
+        <a href="{% url 'settings' %}" class="inline-flex items-center text-sm font-medium">
+          Settings
+        </a> 
+        <i class="fa-solid fa-angle-right"></i>
+      </li>
+      <li class="inline-flex items-center space-x-1 text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
+        <a
+          hx-get="{% url "employee_list" %}"
+          hx-target="#settings_content"
+          hx-swap="innerHtml"
+          class="inline-flex items-center text-sm font-medium cursor-pointer">
+          Employee
+        </a> 
+        <i class="fa-solid fa-angle-right"></i>
+      </li>
+      <li class="inline-flex items-center space-x-1 text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
+        <span class="ms-1 text-sm font-medium text-gray-500 md:ms-2 dark:text-gray-400">
+          Employee Deatils
+        </span>
+      </li>
+    </ol>
+  </nav>
+  <div class="p-4 pt-10 rounded-lg h-modal px-10 min-w-min">
     <div
       id="tabs" hx-target="#tab-contents" role="tablist"
-      hx-on:htmx-after-on-load="let currentTab = document.querySelector('[aria-selected=true]');
-      currentTab.setAttribute('aria-selected', 'false') currentTab.classList.remove('selected')
-      let newTab = event.target newTab.setAttribute('aria-selected', 'true') newTab.classList.add('selected')"
-      class="flex space-x-4 border-b border-gray-500" >
+      class="flex space-x-4 border-b border-gray-500">
 
       <button
         role="tab" aria-controls="tab-contents" aria-selected="true"
@@ -16,7 +46,7 @@
       </button>
       <button
         role="tab" aria-controls="tab-contents" aria-selected="false"
-        hx-get=""
+        hx-get="{% url 'log' user.user.id %}"
         class="px-4 py-2 rounded-lg bg-gray-700 text-white rounded-b-none"
         _="on click remove .bg-gray-500 from .rounded-b-none in tabs add .bg-gray-500 to me" >
         login
@@ -29,7 +59,7 @@
         deduction
       </button>
       <button role="tab" aria-controls="tab-contents" aria-selected="false"
-        hx-get="/tab3"
+        hx-get="{% url 'permissions' user.user.id %}"
         class="px-4 py-2 rounded-lg bg-gray-700 text-white rounded-b-none"
         _="on click remove .bg-gray-500 from .rounded-b-none in tabs add .bg-gray-500 to me" >
         permissions
