--- a/templates/settings/employee/tabs/log.html
+++ b/templates/settings/employee/tabs/log.html
@@ -1,16 +1,6 @@
-<div class="container h-100" >
-  <div class="row h-100">
-    <div class="col-md-6">
-      <div class="bg-white p-4 mt-4 rounded " style="height: 95%">
-        {% include "settings/employee/tables/login_table.html" %}
-      </div>
-    </div>
-    <div class="col-md-6">
-      <div
-        hx-trigger="load, login_time from:body" hx-get="{% url 'login_time' user.user.id %}" hx-target="this"
-        class="bg-white p-4 mt-4 rounded " style="height: 95%">
-      </div>
-    </div>
+<div class="grid md:grid-cols-2 md:gap-20 gap-5">
+  <div class="h-10 bg-gray-800 rounded-lg p-10">
   </div>
-  <br>
+  <div class="h-10 bg-gray-800 rounded-lg p-10">
+  </div>
 </div>
