--- a/templates/settings/employee/employee.html
+++ b/templates/settings/employee/employee.html
@@ -8,8 +8,7 @@
           Home
         </a> 
         <i class="fa-solid fa-angle-right"></i>
-      </li>
-      <li class="inline-flex items-center space-x-1 text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
+      </li> <li class="inline-flex items-center space-x-1 text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
         <a href="{% url 'settings' %}" class="inline-flex items-center text-sm font-medium">
           Settings
         </a> 
