--- a/templates/settings/employee/employee_detail.html
+++ b/templates/settings/employee/employee_detail.html
@@ -40,28 +40,28 @@
       <button
         role="tab" aria-controls="tab-contents" aria-selected="true"
         hx-get="{% url 'info' user.user.id %}"
-        class="px-4 py-2 rounded-lg bg-gray-700 text-white rounded-b-none bg-gray-500"
-        _="on click remove .bg-gray-500 from .rounded-b-none in tabs add .bg-gray-500 to me" >
+        class="px-4 py-2 rounded-lg text-white hover:bg-gray-500 rounded-b-none bg-gray-500 "
+        _="on click remove .bg-gray-500 from <button/> in tabs then add .bg-gray-500 on me" >
         info
       </button>
       <button
         role="tab" aria-controls="tab-contents" aria-selected="false"
         hx-get="{% url 'log' user.user.id %}"
-        class="px-4 py-2 rounded-lg bg-gray-700 text-white rounded-b-none"
-        _="on click remove .bg-gray-500 from .rounded-b-none in tabs add .bg-gray-500 to me" >
+        class="px-4 py-2 rounded-lg text-white rounded-b-none hover:bg-gray-500"
+        _="on click remove .bg-gray-500 from <button/> in tabs then add .bg-gray-500 on me" >
         login
       </button>
       <button
         role="tab" aria-controls="tab-contents" aria-selected="false"
         hx-get="{% url 'deduction' user.user.id %}"
-        class="px-4 py-2 rounded-lg bg-gray-700 text-white rounded-b-none"
-        _="on click remove .bg-gray-500 from .rounded-b-none in tabs add .bg-gray-500 to me" >
+        class="px-4 py-2 rounded-lg text-white rounded-b-none hover:bg-gray-500"
+        _="on click remove .bg-gray-500 from .rounded-b-none in tabs then add .bg-gray-500 to me" >
         deduction
       </button>
       <button role="tab" aria-controls="tab-contents" aria-selected="false"
         hx-get="{% url 'permissions' user.user.id %}"
-        class="px-4 py-2 rounded-lg bg-gray-700 text-white rounded-b-none"
-        _="on click remove .bg-gray-500 from .rounded-b-none in tabs add .bg-gray-500 to me" >
+        class="px-4 py-2 rounded-lg text-white rounded-b-none hover:bg-gray-500"
+        _="on click remove .bg-gray-500 from .rounded-b-none in tabs then add .bg-gray-500 to me" >
         permissions
       </button>
     </div>
