--- a/templates/settings/settings.html
+++ b/templates/settings/settings.html
@@ -36,7 +36,7 @@
 {% endblock sidecontent %}
 
 {% block content %} 
-  <div id="settings_content" class="h-screen">
+  <div id="settings_content" class="max-h-full">
     {% include 'settings/employee/employee.html' %}
   </div>
 {% endblock %}
