--- a/templates/settings/employee/modals/create_user_profile.html
+++ b/templates/settings/employee/modals/create_user_profile.html
@@ -19,6 +19,7 @@
         cancel
       </button>
       <button 
+        _="on click add .hidden to modal_div"
         class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300
         font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-800 
         dark:focus:ring-blue-800 my-3" type="submit">
