--- a/templates/settings/employee/tables/login_table.html
+++ b/templates/settings/employee/tables/login_table.html
@@ -1,23 +1,21 @@
-<h5 class="card-title">Login History</h5>
-<table class="table table-dark table-striped" id="sortable-table">
-  <thead>
+<table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+  <thead class="text-sm text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
     <tr>
-      <th class="sortable">Date</th>
-      <th class="sortable">Status</th>
+      <th scope="col" class="px-6 py-3">Date</th>
+      <th scope="col" class="px-6 py-3">Status</th>
     </tr>
   </thead>
   <tbody>
     {% for login in login_history %}
-    <tr>
-      <td>{{ login.date_time }}</td>
-      <td>
+    <tr class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800">
+      <td class="px-6 py-4 text-base">{{ login.date_time }}</td>
+      <td class="px-6 py-4 text-base">
         {% if login.is_login %}
-          <span class="text-success"> Login </span>
+          <span class="text-green-500"> Login </span>
         {% else %}
-          <span class="text-danger"> Logout </span>
+          <span class="text-red-500"> Logout </span>
         {% endif %}
     </tr>
     {% endfor %}
   </tbody>
 </table>
-
