update the deduction table and filter the actions

--- a/templates/settings/employee/tables/actions_table.html
+++ b/templates/settings/employee/tables/actions_table.html
@@ -1,9 +1,9 @@
-<table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+<table class="w-full truncate text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
   <thead class="text-sm text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
     <tr>
       <th scope="col" class="px-6 py-3">Action</th>
       <th scope="col" class="px-6 py-3">Type</th>
-      <th scope="col" class="px-6 py-3">Changed</th>
+      <th scope="col" class="px-6 py-3">Object</th>
       <th scope="col" class="px-6 py-3">Date</th>
     </tr>
   </thead>
