--- a/templates/settings/employee/tables/deduction_table.html
+++ b/templates/settings/employee/tables/deduction_table.html
@@ -1,10 +1,11 @@
-<table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+<table class="w-full truncate text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
   <thead class="text-sm text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
     <tr>
       <th scope="col" class="px-6 py-3">Name</th>
       <th scope="col" class="px-6 py-3">Amount</th>
       <th scope="col" class="px-6 py-3">Discription</th>
       <th scope="col" class="px-6 py-3">Date</th>
+      <th scope="col" class="px-6 py-3">Action</th>
     </tr>
   </thead>
   <tbody>
@@ -14,6 +15,24 @@
       <td class="px-6 py-4 text-base">{{ deduction.amount }}</td>
       <td class="px-6 py-4 text-base">{{ deduction.discription }}</td>
       <td class="px-6 py-4 text-base">{{ deduction.date|date:"Y-m-d" }}</td>
+      <td class="px-6 py-4 text-base space-x-2">
+        <div class="flex gap-5">
+          <a 
+            hx-get="{% url 'edit_deduction' deduction.id %}"
+            hx-target="#modal_form"
+            hx-swap="innerHtml"
+            _="on click remove .hidden from modal_div"
+            class="cursor-pointer hover:text-blue-700">
+            <i class="fa-solid fa-pen-to-square"></i>
+          </a>
+          <a 
+            hx-post="{% url 'delete_deduction' deduction.id %}"
+            hx-confirm="Are you sure you want to delete this deduction?"
+            class="cursor-pointer hover:text-red-700 ">
+            <i class="fa-solid fa-trash"></i>
+          </a>
+        </div>
+      </td>
     </tr>
     {% endfor %}
   </tbody>
