--- a/templates/settings/employee/tabs/log.html
+++ b/templates/settings/employee/tabs/log.html
@@ -7,7 +7,7 @@
       {% include "settings/employee/tables/login_table.html" %}
     </div>
   </div>
-  <div class="xl:col-span-2 bg-gray-800 rounded-lg md:min-w-80">
+  <div class="xl:col-span-2 min-w-full bg-gray-800 rounded-lg ">
     <div class="flex justify-center items-center mb-2 rounded-t-lg bg-gray-700">
       <p class="text-white text-lg m-2"> Actions History </p>
     </div>
